[tool.poetry]
name = "felis"
version = "0.1.0"
description = "A python bot framework based on Actors"
authors = ["Iori Ichinose"]
license = "LGPL-2.1"
readme = "README.md"
repository = "https://github.com/iori2333/felis"
keywords = ["bot", "actor", "qq", "onebot"]
packages = [
  { include = "felis" },
]

[tool.poetry.dependencies]
python = "^3.10"
typing_extensions = "^4.5.0"
pydantic = "^1.10.6"
websockets = "^10.4"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
